--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "figma-oauth-server",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "private": true,
   "scripts": {
