Major improvements: Fix Figma to HTML conversion, add Braze upload, LLM suggestions
- Fixed Figma to HTML conversion with email-compatible table layout
- Added image detection and export from Figma designs
- Converted vectors to PNG images instead of placeholders
- Improved error handling for Braze and Figma connections
- Fixed Vite proxy configuration (port 3000 instead of 4000)
- Added LLM-powered liquid tag suggestions route
- Added Braze template upload endpoint with name sanitization
- Added comprehensive documentation and troubleshooting guides
- Improved UI with conversion status cards and better error messages
- Added new components: BrazeProtected, BrazeConnectionWarning, LLMStatusIndicator

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,27 @@
+# Figma Configuration
+VITE_FIGMA_CLIENT_ID=your_figma_client_id
+VITE_FIGMA_REDIRECT_URI=http://localhost:5173/figma-callback
+VITE_FIGMA_BACKEND=http://localhost:4000
+FIGMA_TOKEN=your_figma_token
+FIGMA_CLIENT_SECRET=your_figma_client_secret
+
 # Braze API Configuration
 # Copy this file to .env and fill in your actual credentials
-
 BRAZE_API_KEY=your_braze_api_key_here
 BRAZE_REST_ENDPOINT=your_braze_rest_endpoint_here
+
+# LLM Configuration for Liquid Tag Suggestions
+# Add your LLM API key here (OpenAI, Anthropic, or compatible API)
+LLM_API_KEY=your_llm_api_key_here
+
+# Optional: Custom LLM API URL (defaults to OpenAI)
+# For OpenAI (default):
+# LLM_API_URL=https://api.openai.com/v1/chat/completions
+# For Anthropic Claude:
+# LLM_API_URL=https://api.anthropic.com/v1/messages
+
+# Optional: Model to use (defaults to gpt-4o-mini)
+# LLM_MODEL=gpt-4o-mini
 
 # Optional: Server Port (defaults to 3000)
 # PORT=3000
