Update README with comprehensive environment setup and usage instructions
- Add detailed .env setup section with required and optional variables
- Include API key acquisition instructions for Figma, Braze, and LLM providers
- Add Usage section with step-by-step workflow (connect Braze FIRST, then Figma)
- Clarify that Braze connection must be done through app UI before uploading
- Update .env.example with better organization and correct ports (8081/3000)
- Add minimal setup example for users who only want Figma to HTML conversion

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,52 @@
-# Figma Configuration
+# ============================================
+# REQUIRED: Figma Integration
+# ============================================
+
+# Frontend Figma OAuth Configuration
 VITE_FIGMA_CLIENT_ID=your_figma_client_id
-VITE_FIGMA_REDIRECT_URI=http://localhost:5173/figma-callback
-VITE_FIGMA_BACKEND=http://localhost:4000
-FIGMA_TOKEN=your_figma_token
-FIGMA_CLIENT_SECRET=your_figma_client_secret
+VITE_FIGMA_REDIRECT_URI=http://localhost:8081/figma-callback
+VITE_FIGMA_BACKEND=http://localhost:3000
 
-# Braze API Configuration
-# Copy this file to .env and fill in your actual credentials
-BRAZE_API_KEY=your_braze_api_key_here
-BRAZE_REST_ENDPOINT=your_braze_rest_endpoint_here
+# Backend Figma Personal Access Token
+# Get from: https://www.figma.com/developers/api#access-tokens
+FIGMA_TOKEN=your_figma_personal_access_token
 
-# LLM Configuration for Liquid Tag Suggestions
-# Add your LLM API key here (OpenAI, Anthropic, or compatible API)
-LLM_API_KEY=your_llm_api_key_here
+# Backend Figma OAuth (Optional - for multi-user OAuth flow)
+# Get from: https://www.figma.com/developers/apps
+# FIGMA_CLIENT_ID=your_figma_oauth_client_id
+# FIGMA_CLIENT_SECRET=your_figma_oauth_client_secret
 
-# Optional: Custom LLM API URL (defaults to OpenAI)
-# For OpenAI (default):
+# ============================================
+# OPTIONAL: Braze Integration
+# ============================================
+# Uncomment these if you want to upload templates to Braze
+
+# BRAZE_API_KEY=your_braze_api_key
+# BRAZE_REST_ENDPOINT=https://rest.iad-01.braze.com
+
+# ============================================
+# OPTIONAL: LLM Configuration
+# ============================================
+# Uncomment these if you want AI-powered Liquid tag suggestions
+
+# For OpenAI:
+# LLM_API_KEY=your_openai_api_key
 # LLM_API_URL=https://api.openai.com/v1/chat/completions
-# For Anthropic Claude:
-# LLM_API_URL=https://api.anthropic.com/v1/messages
-
-# Optional: Model to use (defaults to gpt-4o-mini)
 # LLM_MODEL=gpt-4o-mini
 
-# Optional: Server Port (defaults to 3000)
+# For Featherless AI:
+# LLM_API_KEY=your_featherless_api_key
+# LLM_API_URL=https://api.featherless.ai/v1/chat/completions
+# LLM_MODEL=meta-llama/Llama-3.1-8B-Instruct
+
+# For other OpenAI-compatible providers:
+# LLM_API_KEY=your_provider_api_key
+# LLM_API_URL=your_provider_url
+# LLM_MODEL=your_model_name
+
+# ============================================
+# OPTIONAL: Server Configuration
+# ============================================
+
+# Backend server port (defaults to 3000 if not set)
 # PORT=3000
